# whasm

./: Cargo.toml  README.md  test.wasm
parser/: Cargo.toml
parser/src/: main.rs
whasm/: Cargo.toml
whasm-grammar-derive/: Cargo.toml
whasm-grammar-derive/src/: attributes.rs  crate_name.rs  enumeration.rs  fields.rs  implementation.rs  lib.rs  structure.rs
whasm/src/: grammar.rs  lib.rs
whasm/src/binary/: error.rs  idx.rs  instr.rs  mod.rs  module.rs  ty.rs
whasm/src/binary/core/: array.rs  byte.rs  error.rs  float.rs  mod.rs  proxy.rs  result.rs  signed.rs  sized.rs  string.rs  traits.rs  unsigned.rs  vec.rs
whasm/src/grammar/: core.rs  idx.rs  instr.rs  instruction.rs  mod.rs  module.rs  prelude.rs  section.rs  ty.rs
whasm/src/grammar/core/: array.rs  byte.rs  derive.rs  error.rs  float.rs  list.rs  mod.rs  signed.rs  string.rs  unsigned.rs  vec.rs
whasm/src/structure/: idx.rs  instr.rs  mod.rs  module.rs  ty.rs
whasm/src/validation/: context.rs  error.rs  idx.rs  instr.rs  mod.rs  module.rs  stacks.rs  ty.rs
