[package]
name = "whasm-grammar-derive"
version = "0.0.1"
authors = ["webbracket"]
edition = "2018"
description = "Whasm's macro to derive the Grammar trait."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
toml = "0.5"
proc-macro2 = "1.0"
syn = "1.0"
quote = "1.0"
proc-macro-error = "0.4"
proc-macro-crate = "0.1"