[package]
name = "whasm"
version = "0.0.1"
authors = ["webbracket"]
edition = "2018"
description = "Yet another Rust library for WebAssembly."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
err-derive = "0.2"
whasm-grammar-derive = { path = "../whasm-grammar-derive" }